# shizuka

./: README.dm  README.md  flake.nix  main.py  pyproject.toml  requirements.txt  requirments.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
api/: constants.py  factory.py
api/servers/: __init__.py
api/servers/cinemana/: __init__.py
api/servers/vodu/: __init__.py
api/utils/: server_utils.py
cli_app/: __init__.py  _data.py  _defaults.py  _get_media.py  _player.py  _search.py  _series_case.py  _server.py  _utils.py
shizuka/: __init__.py
shizuka/api/: constants.py  factory.py
shizuka/api/servers/: __init__.py
shizuka/api/servers/cinemana/: __init__.py
shizuka/api/servers/vodu/: __init__.py
shizuka/utils/: server_utils.py
utils/: server_utils.py  video_player.py
