[tool.poetry]
name = "shizuka"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8 <3.12"
idna = "3.3"
pyinquirer = "1.0.3"
requests = "2.26.0"

[tool.poetry.scripts]
main = "shizuka:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
