[tool.poetry]
name = "shizuka"
version = "0.1.0"
description = ""
authors = ["Hasan Pasha <bashahsn22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9 <3.12"
idna = "3.3"
pyinquirer = "1.0.3"
requests = "2.26.0"
appdirs = "^1.4.4"

[tool.poetry.scripts]
shizuka = "shizuka:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
